# interview-prep-portal

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  docker-healthcheck  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
backend/: __init__.py  agents.py  cli.py  mcp_server.py  profile.py  profile_render.py  prompts.py  server.py  tools.py
backend/tests/: test_agents.py  test_cli.py  test_mcp.py  test_profile.py  test_profile_render.py  test_prompts.py  test_server.py  test_tools.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  HERMES_PLUGIN.md  PRODUCT_REFINEMENT_AUDIT.md  ROADMAP.md
plugin-tests/: test_tools.py
plugin/career-prep/: __init__.py  plugin.yaml  schemas.py  tools.py
profiles/: example-nurse.yaml
public/: manifest.json  sw.js
public/profiles/: README.md  example-marketer.yaml  example-software-engineer.yaml  example-teacher.yaml
scripts/: healthcheck.sh  install-plugin.sh  serve.sh  start.sh  stop.sh
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src/components/: ErrorBoundary.tsx  Layout.tsx  Modal.tsx  Sidebar.tsx  StatusBadge.tsx
src/lib/: backend.ts
src/pages/: ApplicationDetail.tsx  Applications.tsx  CompareJobs.tsx  Contacts.tsx  Dashboard.tsx  Flashcards.tsx  InterviewPrep.tsx  JDEvaluator.tsx  (+11 more)
vite-plugins/: spa-history-fallback.ts
(+28 files in other folders)
